--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,17 +3,17 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
-        app:startDestination="@id/nikNameFragment">
+        app:startDestination="@id/nickNameFragment">
 
 
     <fragment android:id="@+id/mainFragment" android:name="com.wlswnwns.chosung_android.main.MainFragment"
               android:label="layout_main" tools:layout="@layout/layout_main">
-        <argument android:name="strNikName" app:argType="string"/>
+        <argument android:name="strNickName" app:argType="string"/>
     </fragment>
 
-    <fragment android:id="@+id/nikNameFragment" android:name="com.wlswnwns.chosung_android.nikname.NikNameFragment"
-              android:label="layout_nikname">
-        <action android:id="@+id/action_nikNameFragment_to_mainFragment" app:destination="@id/mainFragment"/>
+    <fragment android:id="@+id/nickNameFragment" android:name="com.wlswnwns.chosung_android.nickname.NickNameFragment"
+              android:label="layout_nickname">
+        <action android:id="@+id/action_nickNameFragment_to_mainFragment" app:destination="@id/mainFragment"/>
     </fragment>
 
 
