--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,14 +6,25 @@
         app:startDestination="@id/nickNameFragment">
 
 
-    <fragment android:id="@+id/mainFragment" android:name="com.wlswnwns.chosung_android.main.MainFragment"
-              android:label="layout_main" tools:layout="@layout/layout_main">
+    <fragment android:id="@+id/mainFragment"
+              android:name="com.wlswnwns.chosung_android.main.MainFragment"
+              android:label="layout_main"
+              tools:layout="@layout/layout_main">
         <argument android:name="strNickName" app:argType="string"/>
+        <action android:id="@+id/action_mainFragment_to_hunminGameFragment" app:destination="@id/hunminGameFragment"/>
     </fragment>
 
-    <fragment android:id="@+id/nickNameFragment" android:name="com.wlswnwns.chosung_android.nickname.NickNameFragment"
+    <fragment android:id="@+id/nickNameFragment"
+              android:name="com.wlswnwns.chosung_android.nickname.NickNameFragment"
               android:label="layout_nickname">
         <action android:id="@+id/action_nickNameFragment_to_mainFragment" app:destination="@id/mainFragment"/>
+    </fragment>
+    <fragment android:id="@+id/hunminGameFragment"
+              android:name="com.wlswnwns.chosung_android.hunminGame.HunminGameFragment"
+              android:label="layout_hunmingame"
+              tools:layout="@layout/layout_hunmingame">
+        <action android:id="@+id/action_hunminGameFragment_to_mainFragment"
+        />
     </fragment>
 
 
