1. 게임 2차 UI 추가 2. 유저가 단어 입력했을때 텍스트 받아오기 3. 유저가 단어를 입력했을때 답이 맞고 틀림에 대한 여부를 텍스트 창으로 띄우기

--- a/app/src/main/res/layout/layout_hunmingame.xml
+++ b/app/src/main/res/layout/layout_hunmingame.xml
@@ -18,13 +18,13 @@
                 android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="175dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="177dp" android:layout_marginBottom="461dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/timeLimitTextView"
+                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/TimeLimitTextView"
                 android:fontFamily="sans-serif-medium" android:textSize="80sp" android:hint="20"/>
         <TextView
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" android:id="@+id/chosungTextView"
+                android:layout_height="wrap_content" android:id="@+id/ChosungTextView"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/timeLimitTextView" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/TimeLimitTextView" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent" android:textSize="40sp"
@@ -37,13 +37,42 @@
                 android:inputType="textPersonName"
                 android:ems="10"
                 app:layout_constraintVertical_bias="0.1"
-                android:id="@+id/userInputEditTextView"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/chosungTextView"
-                android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/UserInputEditTextView"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/ChosungTextView"
+                android:layout_marginEnd="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="32dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                android:textSize="24sp" android:textColorHint="#C9C3C3" android:hint="단어를 입력해주세요"/>
+                android:textSize="24sp" android:textColorHint="#C9C3C3"
+                android:hint="@string/hunminGame_hint"/>
+        <ImageView
+                android:src="@drawable/img_game_answer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/AnswerImageView" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/TimeLimitTextView"
+                android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.07"
+                android:visibility ="gone"/>
+        <ImageView
+                android:src="@drawable/img_game_wrong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/WrongImageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/TimeLimitTextView"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintVertical_bias="0.07"
+                android:visibility ="gone"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
