--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,6 +37,22 @@
         <action android:id="@+id/action_waitRoomFragment_to_hunminGameFragment"
                 app:destination="@id/hunminGameFragment"/>
         <argument android:name="strNikName" app:argType="string"/>
+        <action
+                android:id="@+id/action_waitRoomFragment_to_kungKungDdaGameFragment"
+                app:destination="@id/kungKungDdaGameFragment" />
+    </fragment>
+    <fragment
+            android:id="@+id/kungKungDdaGameFragment"
+            android:name="com.wlswnwns.chosung_android.hunminGame.KungKungDdaGameFragment"
+            android:label="KungKungDdaGameFragment" />
+
+    <fragment android:id="@+id/hunminGameRankingFragment"
+              android:name="com.wlswnwns.chosung_android.hunminGameRanking.HunminGameRankingFragment"
+              android:label="HunminGameRankingFragment">
+        <action android:id="@+id/action_hunminGameRankingFragment_to_waitRoomFragment"
+                app:destination="@id/waitRoomFragment"/>
+        <action android:id="@+id/action_hunminGameRankingFragment_to_hunminGameFragment"
+                app:destination="@id/hunminGameFragment"/>
     </fragment>
 
     <fragment android:id="@+id/hunminGameRankingFragment"
