--- a/app/src/main/res/layout/layout_hunmingame.xml
+++ b/app/src/main/res/layout/layout_hunmingame.xml
@@ -9,115 +9,181 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#EC686F">
 
         <TextView
-                android:id="@+id/TimeLimitTextView"
+                android:id="@+id/TitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="32dp"
+                android:layout_marginTop="24dp"
                 android:fontFamily="sans-serif-medium"
-                android:hint="20"
-                android:textSize="80sp"
-                app:layout_constraintBottom_toTopOf="@+id/GameLogRecyclerView"
-                app:layout_constraintEnd_toStartOf="@+id/ChosungTextView"
+                android:text="훈민정음"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/progressBar"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-                android:id="@+id/ChosungTextView"
+
+        <View
+                android:id="@+id/ChosungView"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
-                android:background="#9C27B0"
-                android:hint="ㅇㅊ"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
-                android:textColorHighlight="#FFFFFF"
-                android:textColorHint="#FFFFFF"
-                android:textSize="40sp"
-                app:layout_constraintBottom_toTopOf="@+id/GameLogRecyclerView"
+                android:layout_marginBottom="32dp"
+                android:background="#FFFFFF"
+                app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/TimeLimitTextView"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/progressBar"
+                app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+                android:id="@+id/ChosungThirdTextView"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="#0A0A0A"
+                android:hint="ㅊ"
+                android:textAlignment="center"
+                android:textColor="#F7E24E"
+                android:textColorHighlight="#FFFFFF"
+                android:textColorHint="#F7E24E"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/ChosungView"
+                app:layout_constraintEnd_toEndOf="@+id/ChosungView"
+                app:layout_constraintHorizontal_bias="0.66"
+                app:layout_constraintStart_toEndOf="@+id/ChosungFirstTextView"
+                app:layout_constraintTop_toTopOf="@+id/ChosungView"
+                app:layout_constraintVertical_bias="0.508" />
+
+        <TextView
+                android:id="@+id/ChosungSecondTextView"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="#0A0A0A"
+                android:hint="ㅇ"
+                android:textAlignment="center"
+                android:textColor="#F7E24E"
+                android:textColorHighlight="#FFFFFF"
+                android:textColorHint="#F7E24E"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/ChosungView"
+                app:layout_constraintEnd_toStartOf="@+id/ChosungThirdTextView"
+                app:layout_constraintStart_toEndOf="@+id/ChosungFirstTextView"
+                app:layout_constraintTop_toTopOf="@+id/ChosungView"
+                app:layout_constraintVertical_bias="0.508" />
+
+        <TextView
+                android:id="@+id/ChosungFirstTextView"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="48dp"
+                android:background="#0A0A0A"
+                android:hint="ㅊ"
+                android:textAlignment="center"
+                android:textColor="#F7E24E"
+                android:textColorHighlight="#FFFFFF"
+                android:textColorHint="#F7E24E"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/ChosungView"
+                app:layout_constraintStart_toStartOf="@+id/ChosungView"
+                app:layout_constraintTop_toTopOf="@+id/ChosungView"
+                app:layout_constraintVertical_bias="0.508" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/GameLogRecyclerView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/UserInputEditTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline"
+                app:layout_constraintVertical_bias="1.0" />
 
         <EditText
                 android:id="@+id/UserInputEditTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="60dp"
                 android:ems="10"
                 android:hint="@string/hunminGame_hint"
                 android:inputType="textPersonName"
-                android:textColorHint="#C9C3C3"
+                android:textColorHint="#FFFFFF"
+
+
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ChosungTextView"
-                app:layout_constraintVertical_bias="1.0"
-
-
-                />
+                app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
                 android:id="@+id/AnswerImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="32dp"
                 android:src="@drawable/img_game_answer"
                 android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/GameLogRecyclerView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.494"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TimeLimitTextView"
-                app:layout_constraintVertical_bias="0.495" />
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="@+id/GameLogRecyclerView"
+                app:layout_constraintTop_toTopOf="@+id/GameLogRecyclerView"
+                app:layout_constraintVertical_bias="0.498" />/>
 
         <ImageView
                 android:id="@+id/WrongImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
                 android:src="@drawable/img_game_wrong"
                 android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TimeLimitTextView"
-                app:layout_constraintVertical_bias="0.451" />
+                app:layout_constraintTop_toTopOf="@+id/GameLogRecyclerView"
+                app:layout_constraintVertical_bias="0.498" />
+        />
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/GameLogRecyclerView"
-                android:layout_width="397dp"
-                android:layout_height="509dp"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/UserInputEditTextView"
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="288dp" />
+
+        <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:background="#F2FE53"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ChosungTextView" />
+                app:layout_constraintTop_toBottomOf="@+id/TitleTextView" /><![CDATA[
+
+        />
+
+
+
+
+
+
+    ]]>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
