--- a/app/src/main/res/layout/layout_kungkungddagame.xml
+++ b/app/src/main/res/layout/layout_kungkungddagame.xml
@@ -31,7 +31,7 @@
                 android:fontFamily="sans-serif-medium"
                 android:hint="다음순서"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/TimeLimitTextView"
+                app:layout_constraintBottom_toTopOf="@+id/TitleTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +49,7 @@
                 app:layout_constraintStart_toEndOf="@+id/Order2TextView" />
 
         <TextView
-                android:id="@+id/TimeLimitTextView"
+                android:id="@+id/TitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="175dp"
@@ -67,7 +67,7 @@
                 app:layout_constraintVertical_bias="0.766" />
 
         <TextView
-                android:id="@+id/ChosungTextView"
+                android:id="@+id/ChosungFirstTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -84,7 +84,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TimeLimitTextView"
+                app:layout_constraintTop_toBottomOf="@+id/TitleTextView"
                 app:layout_constraintVertical_bias="0.063" />
 
         <EditText
@@ -104,7 +104,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.012"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ChosungTextView"
+                app:layout_constraintTop_toBottomOf="@+id/ChosungFirstTextView"
                 app:layout_constraintVertical_bias="0.093" />
 
         <Button
@@ -130,7 +130,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TimeLimitTextView"
+                app:layout_constraintTop_toBottomOf="@+id/TitleTextView"
                 app:layout_constraintVertical_bias="0.07" />
 
         <ImageView
@@ -147,7 +147,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TimeLimitTextView"
+                app:layout_constraintTop_toBottomOf="@+id/TitleTextView"
                 app:layout_constraintVertical_bias="0.07" />
 
         <androidx.recyclerview.widget.RecyclerView
