--- a/app/src/main/res/layout/layout_wait_room.xml
+++ b/app/src/main/res/layout/layout_wait_room.xml
@@ -53,6 +53,7 @@
                 android:id="@+id/entryListView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_weight="1" />
 
         <TextView
