--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,6 +26,14 @@
               tools:layout="@layout/layout_hunmingame">
         <action android:id="@+id/action_hunminGameFragment_to_hunminGameRankingFragment"
                 app:destination="@+id/hunminGameRankingFragment"/>
+        <argument
+                android:name="iLength"
+                app:argType="integer" />
+        <argument
+                android:name="iTime"
+                app:argType="integer" />
+<!--        <argument android:name="User"-->
+<!--                app:argType="com.wlswnwns.chosung_android.waitRoom.WaitRoomModel.Users[]"/>-->
     </fragment>
     <fragment android:id="@+id/cameraFragment" android:name="com.wlswnwns.chosung_android.qrcamera.CameraFragment"
               android:label="CameraFragment">
