--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,8 +24,16 @@
               android:name="com.wlswnwns.chosung_android.hunminGame.HunminGameFragment"
               android:label="layout_hunmingame"
               tools:layout="@layout/layout_hunmingame">
-        <action android:id="@+id/action_hunminGameFragment_to_mainFragment"
-        />
+        <action android:id="@+id/action_hunminGameFragment_to_hunminGameRankingFragment"
+                app:destination="@+id/hunminGameRankingFragment"/>
+        <argument
+                android:name="iLength"
+                app:argType="integer" />
+        <argument
+                android:name="iTime"
+                app:argType="integer" />
+<!--        <argument android:name="User"-->
+<!--                app:argType="com.wlswnwns.chosung_android.waitRoom.WaitRoomModel.Users[]"/>-->
     </fragment>
     <fragment android:id="@+id/cameraFragment" android:name="com.wlswnwns.chosung_android.qrcamera.CameraFragment"
               android:label="CameraFragment">
@@ -37,6 +45,28 @@
         <action android:id="@+id/action_waitRoomFragment_to_hunminGameFragment"
                 app:destination="@id/hunminGameFragment"/>
         <argument android:name="strNikName" app:argType="string"/>
+        <action
+                android:id="@+id/action_waitRoomFragment_to_kungKungDdaGameFragment"
+                app:destination="@id/kungKungDdaGameFragment" />
+        <argument
+                android:name="room"
+                app:argType="com.wlswnwns.chosung_android.item.Room" />
+        <argument
+                android:name="game"
+                app:argType="com.wlswnwns.chosung_android.item.Game" />
+    </fragment>
+    <fragment
+            android:id="@+id/kungKungDdaGameFragment"
+            android:name="com.wlswnwns.chosung_android.hunminGame.KungKungDdaGameFragment"
+            android:label="KungKungDdaGameFragment" />
+
+    <fragment android:id="@+id/hunminGameRankingFragment"
+              android:name="com.wlswnwns.chosung_android.hunminGameRanking.HunminGameRankingFragment"
+              android:label="HunminGameRankingFragment">
+        <action android:id="@+id/action_hunminGameRankingFragment_to_waitRoomFragment"
+                app:destination="@id/waitRoomFragment"/>
+        <action android:id="@+id/action_hunminGameRankingFragment_to_hunminGameFragment"
+                app:destination="@id/hunminGameFragment"/>
     </fragment>
 
 
