--- a/app/src/main/res/layout/layout_game_over.xml
+++ b/app/src/main/res/layout/layout_game_over.xml
@@ -21,7 +21,7 @@
                 app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
         <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/TitleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_game_log"
@@ -39,7 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="80dp"
                 android:background="#0A0A0A"
-                android:text="게임종료"
+
+                android:text="@string/game_over_finish"
                 android:textColor="#F2FE53"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#0A0A0A"
-                android:text="한 판더"
+                android:text="@string/game_over_restart"
                 android:textColor="#F2FE53"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -83,6 +84,6 @@
                 app:layout_constraintBottom_toTopOf="@+id/guideline3"
                 app:layout_constraintEnd_toEndOf="@+id/view2"
                 app:layout_constraintStart_toStartOf="@+id/view2"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
