--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,8 +36,8 @@
             android:label="layout_hunmingame"
             tools:layout="@layout/layout_hunmingame">
         <action
-                android:id="@+id/action_hunminGameFragment_to_hunminGameRankingFragment"
-                app:destination="@+id/hunminGameRankingFragment" />
+                android:id="@+id/action_hunminGameFragment_to_hunminGameOverFragment"
+                app:destination="@+id/hunminGameOverFragment" />
         <argument
                 android:name="iLength"
                 app:argType="integer" />
@@ -81,20 +81,28 @@
     </fragment>
     <fragment
             android:id="@+id/kungKungDdaGameFragment"
-            android:name="com.wlswnwns.chosung_android.hunminGame.KungKungDdaGameFragment"
-            android:label="KungKungDdaGameFragment" />
+            android:name="com.wlswnwns.chosung_android.KungKungDdaGame.KungKungDdaGameFragment"
+            android:label="KungKungDdaGameFragment">
+        <action
+                android:id="@+id/action_kungKungDdaGameFragment_to_kungKungDdaGameOverFragment"
+                app:destination="@id/kungKungDdaGameOverFragment" />
+    </fragment>
 
     <fragment
-            android:id="@+id/hunminGameRankingFragment"
-            android:name="com.wlswnwns.chosung_android.hunminGameRanking.HunminGameRankingFragment"
-            android:label="HunminGameRankingFragment">
+            android:id="@+id/hunminGameOverFragment"
+            android:name="com.wlswnwns.chosung_android.hunminGameOver.HunminGameOverFragment"
+            android:label="HunminGameOverFragment">
         <action
-                android:id="@+id/action_hunminGameRankingFragment_to_waitRoomFragment"
+                android:id="@+id/action_hunminGameOverFragment_to_waitRoomFragment"
                 app:destination="@id/waitRoomFragment" />
         <action
-                android:id="@+id/action_hunminGameRankingFragment_to_hunminGameFragment"
+                android:id="@+id/action_hunminGameOverFragment_to_hunminGameFragment"
                 app:destination="@id/hunminGameFragment" />
     </fragment>
+    <fragment
+            android:id="@+id/kungKungDdaGameOverFragment"
+            android:name="com.wlswnwns.chosung_android.KungKungDdaGameOver.KungKungDdaGameOverFragment"
+            android:label="KungKungDdaGameOverFragment" />
 
 
 </navigation>
