--- a/app/src/main/res/layout/layout_hunmingame.xml
+++ b/app/src/main/res/layout/layout_hunmingame.xml
@@ -47,7 +47,7 @@
 
 
         <TextView
-                android:id="@+id/ㅊ"
+                android:id="@+id/ChosungTextView"
                 android:layout_width="300dp"
                 android:layout_height="70dp"
                 android:background="#0A0A0A"
