타이머 프로그레스바 완료

--- a/app/src/main/res/layout/layout_hunmingame.xml
+++ b/app/src/main/res/layout/layout_hunmingame.xml
@@ -128,7 +128,7 @@
                 app:layout_constraintGuide_begin="288dp" />
 
         <ProgressBar
-                android:id="@+id/progressBar"
+                android:id="@+id/TimerProgressBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
