순위 발표시 성공/실패 유저 모두 표시 게임 종료시 방장만 재시작 버튼 표기

--- a/app/src/main/res/layout/item_hunmingameover_result.xml
+++ b/app/src/main/res/layout/item_hunmingameover_result.xml
@@ -37,5 +37,12 @@
                 android:layout_marginLeft="12dp"
                 android:text="차차차"
                 android:textSize="15sp" />
+        <TextView
+                android:id="@+id/isFailedView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:text="실패"
+                android:textSize="15sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
