--- a/app/src/main/res/layout/layout_game_over.xml
+++ b/app/src/main/res/layout/layout_game_over.xml
@@ -17,8 +17,10 @@
                 android:background="#FFFFFF"
                 app:layout_constraintBottom_toTopOf="@+id/guideline3"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline2" />
+                app:layout_constraintTop_toTopOf="@+id/guideline2"
+                app:layout_constraintVertical_bias="0.0" />
 
         <TextView
                 android:id="@+id/TitleTextView"
